some files loaded in

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Rob Daly's Portfolio.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>On this page you will find links to my work:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<ul>
+  <li><a href="responsive/HW6/dist/index.html">Responsive Site</a></li>
+  <p>Lorem ipsum Deserunt ullamco Ut in tempor velit minim mollit incididunt enim sit commodo. Lorem ipsum Ut Duis deserunt exercitation labore Duis Duis cupidatat sunt. Lorem ipsum Nostrud fugiat ullamco ea qui voluptate fugiat ullamco ullamco veniam exercitation consectetur.</p>
+  <li><a href="responsive/HW6/dist/index.html">Tree Site</a></li>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
