--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/rdaly1490">rdaly1490</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credit right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
         <h3>
