--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p>On this page you will find links to my work:</p>
 
 <ul>
-  <li><a href="responsive/HW6/dist/index.html">Responsive Site</a></li>
+  <li><a href="../tiy/day6/hw6/dist/index.html">Responsive Site</a></li>
   <p>Lorem ipsum Deserunt ullamco Ut in tempor velit minim mollit incididunt enim sit commodo. Lorem ipsum Ut Duis deserunt exercitation labore Duis Duis cupidatat sunt. Lorem ipsum Nostrud fugiat ullamco ea qui voluptate fugiat ullamco ullamco veniam exercitation consectetur.</p>
   <li><a href="responsive/HW6/dist/index.html">Tree Site</a></li>
 
