fixing pic route

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="parallax">
-      <img src="portfolioHero.jpg" alt="Unsplashed background img 1">
+      <img src="portfolioHero.JPG" alt="Unsplashed background img 1">
     </div>
   </div>
 
