--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
           <a href="#!" class="brand-logo">DalyWebDev</a>
           <a href="#" data-activates="mobile-demo" class="right button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down nav-links">
-            <li><a class="waves-effect waves-light" href="#">Home</a></li>
-            <li><a class="waves-effect waves-light" href="#">About</a></li>
-            <li><a class="waves-effect waves-light" href="#">Contact</a></li>
+            <li><a class="waves-effect waves-light about-me" href="#">About</a></li>
+            <li><a class="waves-effect waves-light contact-me" href="#">Contact</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a class="about-me" href="#">About</a></li>
+            <li><a class="contact-me" href="#">Contact</a></li>
           </ul>
       </div>
   </nav>
@@ -46,7 +44,7 @@
       </div>
     </div>
     <div class="parallax">
-      <img src="portfolioHero.JPG" alt="Unsplashed background img 1">
+      <img src="portfolioHero.jpg" alt="Unsplashed background img 1">
     </div>
   </div>
 
@@ -104,7 +102,7 @@
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
             <h5 class="center">Technologies Used</h5>
             <p class="light">The following technologies were used in the creation of this project:</p>
-            <div class="col s6 m6 light">
+            <div id="front-pad" class="col s6 m6 light front-12">
               <ul>
                 <h6>Front-End</h6>
                 <li>- React</li>
@@ -113,7 +111,7 @@
                 <li>- Bootstrap</li>
               </ul>
             </div>
-            <div class="col s6 m6 light">
+            <div id="back-pad" class="col s6 m6 light front-12">
               <ul>
                 <h6>Back End</h6>
                 <li>- Node</li>
@@ -183,7 +181,7 @@
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
             <h5 class="center">Technologies Used</h5>
             <p class="light">The following technologies were used in the creation of this project:</p>
-            <div class="col s12 m8 light">
+            <div class="col s12 m12 light front-12">
               <ul>
                 <h6>Front-End</h6>
                 <li>- JQuery</li>
@@ -250,7 +248,7 @@
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
             <h5 class="center">Technologies Used</h5>
             <p class="light">The following technologies were used in the creation of this project:</p>
-            <div class="col s12 m8 light">
+            <div class="col s12 m12 light front-12">
               <ul>
                 <h6>Front-End</h6>
                 <li>- React</li>
