style tweaks and gulpfile minification

--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
           <img class="responsive-img z-depth-5 center pic" src="prod/images/profpic.jpg">
           <h3 class="center">About Me</h3>
           <ul id="about-list">
-            <li>New Yorker at heart, Engineer by degree, and web developer by passion.  I'm currently residing in beautiful Austin, Texas and filling my time with coffee binges and late night coding sessions.
-            </li>
-            <li>I'm a graduate of The Iron Yard code school and I do freelance work to help people get their small companies up and running.  Feel free to contact me and we can grab an obligation-free cup of coffee some time.</li>
+            <li>New Yorker at heart, Engineer by degree, and web developer by passion.  I'm a  graduate of The Iron Yard code academy, currently residing in beautiful Austin, Texas.  At the moment I'm filling my time with coffee binges, late night coding sessions, and keeping up with the latest in the tech community.</li>
+            <li>I do freelance work to give people the beautiful, user-oriented, and functional websites they need.  Feel free to contact me and we can grab an obligation-free cup of coffee some time.</li>
           </ul>
         </div>
       </div>
@@ -286,18 +285,18 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Contact Me</h5>
-          <p class="grey-text text-lighten-4">You can contact me via email at dalywebdev@gmail.com or reach out to me on any of these social media sites:</p>
+          <h5>Contact Me</h5>
+          <p>You can contact me via email at dalywebdev@gmail.com or reach out to me on any of these social media sites:</p>
         </div>
         <div id="social-media" class="col l3 s12">
-          <h5 class="white-text">Social Media</h5>
-          <a class="white-text" target="_blank" href="https://twitter.com/dalywebdev">
+          <h5>Social Media</h5>
+          <a target="_blank" href="https://twitter.com/dalywebdev">
             <img src="prod/images/twitterwhite.png">
           </a>
-          <a class="white-text" target="_blank" href="https://github.com/rdaly1490">
+          <a target="_blank" href="https://github.com/rdaly1490">
             <img src="prod/images/github.png">
           </a>
-          <a class="white-text" target="_blank" href="https://www.linkedin.com/in/dalyrobert">
+          <a target="_blank" href="https://www.linkedin.com/in/dalyrobert">
             <img src="prod/images/linkedin.png">
           </a>
         </div>
