updated regarding heroku load time

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <h5 class="center">Project Links</h5>
 
             <p class="light">
-            Feel free to check out the link below to the live site hosted on Heroku.  If you're a code junkie, check out the link below that one for the github repo containing my source code:
+            This one's hosted on Heroku's free tier, so it takes a little while to load initially.  If you're a code junkie, check out the link below that one for the github repo containing my source code:
               <ul class="light center">
                 <li><a target="_blank" href="http://ironspiration.herokuapp.com/">Link to live site</a></li>
                 <li><a target="_blank" href="https://github.com/vvj5/ironspiration">Link to Github Repo</a></li>
