added local fitkora in case of live site being altered

--- a/index.html
+++ b/index.html
@@ -198,9 +198,10 @@
             <h5 class="center">Project Links</h5>
 
             <p class="light">
-            Check out the link below to the live site hosted on BlueHost.  If you want to check out the source code click the link for my github repo:
+            Check out the link below to the un-altered site.  Below that is the live site hosted on BlueHost, which may have been altered by my client.  If you want to check out the source code click the last link for my github repo:
               <ul class="light center">
-                <li><a target="_blank" href="http://fitkora.com/">Link to live site</a></li>
+                <li><a target="_blank" href="fitkora/dist/index.html">Link to un-altered site</a></li>
+                <li><a target="_blank" href="http://fitkora.com/">Live Site: www.fitkora.com</a></li>
                 <li><a target="_blank" href="https://github.com/rdaly1490/project">Link to Github Repo</a></li>
               </ul>
             </p>
