fixed iobrew comment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
 
+<!-- --------------------- -->
+<!-- Welcome to my code :) -->
+<!-- --------------------- -->
+
+
+
 <!--          ___________________Nav___________________ -->
 
   <nav class="white" role="navigation">
@@ -62,7 +68,7 @@
     </div>
   </div>
 
-  <!-- ________________________Fitkora Mobile Img______________________ -->  
+  <!-- ________________________ioBrew Mobile Img______________________ -->  
   <div class="container mobileview">
     <img class="responsive-img" src="prod/images/iobrewmobile.png">
   </div>
