fixing submodule issue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- --------------------- -->
-<!-- Welcome to my code :) -->
+<!-- Welcome to my code :) , take a peek around-->
 <!-- --------------------- -->
 
 
